# agents

./: README.md  pyproject.toml
scripts/: agent.py
scripts/polymarket/: client.py  models.py
